[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 14.0
text = "Cluennector!!!!"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.9

[node name="GameBtn" type="Button" parent="VBoxContainer"]
margin_right = 512.0
margin_bottom = 38.0
size_flags_vertical = 3
text = "Detectkve"

[node name="VSpace" type="Control" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 512.0
margin_bottom = 80.0
size_flags_vertical = 3

[node name="GeoBtn" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 512.0
margin_bottom = 122.0
size_flags_vertical = 3
text = "Geography"

[node name="VSpace2" type="Control" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 512.0
margin_bottom = 165.0
size_flags_vertical = 3

[node name="HistoryBtn" type="Button" parent="VBoxContainer"]
margin_top = 169.0
margin_right = 512.0
margin_bottom = 207.0
size_flags_vertical = 3
text = "History"

[node name="VSpace3" type="Control" parent="VBoxContainer"]
margin_top = 211.0
margin_right = 512.0
margin_bottom = 249.0
size_flags_vertical = 3

[node name="PokeBtn" type="Button" parent="VBoxContainer"]
margin_top = 253.0
margin_right = 512.0
margin_bottom = 292.0
size_flags_vertical = 3
text = "Pokemon"

[node name="VSpace4" type="Control" parent="VBoxContainer"]
margin_top = 296.0
margin_right = 512.0
margin_bottom = 334.0
size_flags_vertical = 3

[node name="VSpace5" type="Control" parent="VBoxContainer"]
margin_top = 338.0
margin_right = 512.0
margin_bottom = 376.0
size_flags_vertical = 3

[node name="VSpace6" type="Control" parent="VBoxContainer"]
margin_top = 380.0
margin_right = 512.0
margin_bottom = 419.0
size_flags_vertical = 3

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
margin_top = 423.0
margin_right = 512.0
margin_bottom = 461.0
size_flags_vertical = 3
text = "Quit"

[node name="VSpace7" type="Control" parent="VBoxContainer"]
margin_top = 465.0
margin_right = 512.0
margin_bottom = 504.0
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/GameBtn" to="." method="_on_GameBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/GeoBtn" to="." method="_on_GeoBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HistoryBtn" to="." method="_on_HistoryBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/PokeBtn" to="." method="_on_PokeBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
